--- a/need.html
+++ b/need.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>B動感光玻之撥動璃的心 - 專題簡介</title>
+    <title>動感光玻之撥動璃的心 - 專題簡介</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@
                           <img src="img/museum-1.jpg">
                       </div>
                       <div class="col-md-7 text-center">
-                        <img src="img/IMG_5964.jpg">
+                        <img src="img/img_5964.jpg">
                       </div>
                     </div>
                     <br/><br/>
