add some page and modified theme

--- a/main.html
+++ b/main.html
@@ -25,10 +25,10 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body style="background-image: url('img/enter_bg.jpg')">
+<body style="background-image: url('img/enter_bg.jpg'); background-size:contain;">
 <div class="container">
 
-<a class="enter" href="page01.html">進入網站</a>
+<a class="enter" href="page01.html#1-1">進入網站</a>
 
 </div>
 </body>
