--- a/page01.html
+++ b/page01.html
@@ -82,10 +82,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="page02.html" class="menu2">動手做做看</a>
+                        <a href="page02.html#2-1" class="menu2">動手做做看</a>
                     </li>
                     <li>
-                        <a href="page03.html" class="menu3">專題誕生過程</a>
+                        <a href="page03.html#3-1" class="menu3">專題誕生過程</a>
                     </li>
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#p4" class="menu4">參加人員 <i class="fa fa-fw fa-caret-down"></i></a>
@@ -99,10 +99,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="page05.html" class="menu5">心得</a>
+                        <a href="page05.html#5-1" class="menu5">心得</a>
                     </li>
                     <li>
-                        <a href="page06.html" class="menu6">資料來源</a>
+                        <a href="page06.html#6-1" class="menu6">資料來源</a>
                     </li>
                 </ul>
             </div>
@@ -519,6 +519,18 @@ Ex: 少量錳可以改變玻璃內因鐵變成的淡綠色<br/>
                         </div>
                         <hr>
                         <p>台灣玻璃館位於彰化縣鹿港鎮得彰濱工業區，入口是一個帆船的造型，象徵”一帆風順”，一進入玻璃館，映入眼簾的是一艘由玻璃打造的船，不過一樓大部分都是商品販賣部，較引人注目的即是兩位玻璃師傅在現場親自拉製玻璃，玻璃館有兩層樓，第一樓主要是販賣玻璃手工製品及一些食物，二樓才是主要的玻璃介紹，裡面有許多細緻的玻璃手工藝品，我們走進四周都是玻璃的迷宮，大家都心驚膽跳的慢慢向前走!深怕掉落透明玻璃，通過隧道後看到的是一個更大的空間，裡面陳設著各式各樣華麗的擺設品，也有許多設施供人體驗，例如有趣的大型萬花筒以及玻璃迷宮，雖然在外面看時感覺十分昏暗，但裡面燈光顏色多變，使人覺得新奇，又帶有一點詭譎的感覺，走在虛幻的世界，還有製作玻璃手工藝品的師傅，我很佩服他們的耐心，能夠做出各式各樣的玻璃製品，讓我看得目瞪口呆，接著走下去看到更多的玻璃，每樣作品都各有不同的意義，有玻璃做的蝴蝶、馬、台北101、皇宮、城堡……等，還有一座完全是玻璃所構成的橋，橋下有玻璃做成的蓮花，讓人印象深刻。每樣作品都是師父們用心製作、獨一無二的，在我看來那些作品都是無價之寶，裡頭有一間令人感到驚奇也是全台灣唯一一間玻璃製成的媽祖廟，裡面沒有令人感到沉重的木柱，只有簡單且具現代感的玻璃建築，猶如一件藝術品。就算是沒有宗教信仰的人看到它，也一定會嘖嘖稱奇。在和藹的媽祖像背後，有著一座由玻璃製作，象徵台灣的玉山主峰，更增加了媽祖的莊嚴。我們走右邊小門，為了遵從習俗的『左青龍右白虎』的方式，因為有人說這樣才能真正保佑以及消災，而正門則是神明的出入口，由於聽從家中長輩的指示，一直將此習俗放在心中並遵從，入廟後我們好奇的四處張望，看見了中央貌似許願池的小池子，裡面有四個小碟子分別寫著不同的希望，聽說一定要投進碟子中才會實現，而我投了四次一次都沒投進，害我有些失落….後來我們誠心的祭拜慈祥的媽祖，請他保佑我們網博能夠有好成績，最後我們有著滿滿的的收穫回到了學校。玻璃館雖身藏在彰濱工業區中，但假日人潮依舊絡繹不絕，做工精美的玻璃藝術品、師傅認真的表情、先進卻不失莊重的媽祖廟，都讓人真切的感受到玻璃館的美。</p>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6">
+                            <img src="img/rsz_458.jpg" class="img-thumbnail">
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <img src="img/rsz_850.jpg" class="img-thumbnail">
+                        </div>
+                        <div class="col-lg-4 col-md-6">
+                            <img src="img/rsz_069.jpg" class="img-thumbnail">
+                        </div>
                     </div>
                 </div>
                 
