--- a/page05.html
+++ b/page05.html
@@ -114,26 +114,44 @@
             <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <div class="row" id="1-1">
+                <div class="row" id="5-1">
                     <div class="col-lg-12">
                         <h1 class="page-header">
                             心得
                         </h1>
-<p>在這為期四個月過程中,資料從無到有,我們也從第一個禮拜不知道要探討什麼的迷惘變成對玻璃知識瞭如指掌的「玻璃達人」,上網.查書.訪問,這些動作無一不是組員花時間.費精力而來的!以下,是組員們製作專題的心得:</p>
 
-<p><b>成分整理</b></p>
-<p>查找資料的過程中過程中很容易就遇到大部分資料都是一模一樣的狀況，要從中取出精隨然後重新詮釋一遍再加入自己的想法，是一件滿困難的事。有一次好不容易統整完了，結果不小心把整個檔案都刪除了，當時心中非常無奈，但大家還是沒有怨言的馬上再把它重新整理了一次。對於國中生來說，有很多關於玻璃的專業名詞我們都不懂，上網資料不夠也必須去請教老師已獲得更詳細的解答。</p>
 
-<p><b>玻璃種類及應用</b></p>
-<p>經由這次整理,我們了解到玻璃有很多不同的種類,每種玻璃的應用皆不同,知道玻璃的世界是如此廣泛,遠遠超出我們對它的理解範圍,無知的我們除了知道他能當窗戶外,沒有其他認知。尤其是身為組員的我們對它的理解是不夠的。從資料中我們一點一滴的加深對它的了解也慢慢充實自己的資訊。</p>
-<p><b>玻璃歷史統整</b></p>
-<p>找玻璃的歷史最難的地方就是沒有一個正確的時間點，從網路和書慢慢整理出最正確的年代。整理過程中可能會與其他組員有許多意見不合的時候，但我們總是會向與自己意見相左的人互相提出自己的一套見解，再接納彼此的說法，反而延伸出更多值得我們去研究、探討的問題。統整後讓我們了解了各國玻璃的演進，還清楚的知道了臺灣的玻璃史，是一個很寶貴的經驗!</p>
-<p><b>製作過程</b></p>
-<p>當我們決定研究玻璃時，就對它的過程感到濃厚的興趣，到底是怎樣的製作方式可以讓玻璃就這樣形成?我們閒暇時就在腦海裡以想像中的製作方式在進行，結果看了行家拍攝玻璃製作的影片竟與與我們的想像相差甚遠!除了了解製作過程之外，還知道了隨著種類.用途的不同,製作過程也大不相同。大家都對於增加了這個新知識感到新奇與開心! </p>
-<p><b>實驗</b></p>
-<p>一開始大家都無法決定玻璃可以嘗試哪些實驗，常見的有測試玻璃的折射係數和硬度，但想要與別人與眾不同，就得花時間查詢有沒有更特別的實驗。這時候，大家想到其實不用侷限於探討玻璃的實驗，在這個講究環保的時代,我們可以由廢物利用的方式製作我們日常生活常用的玻璃杯。提出這個點子，大家也就接連同意了，接著便是大家竭盡全力的尋找製作步驟及蒐集玻璃瓶,雖然花費了三個禮拜的時間，以及不斷失敗，但我們也從中學習到不屈不撓的精神!</p>
-<p>在日常生活中處處可見玻璃,玻璃也為人類帶來了大大的好處,但可能就是因為司空見慣或習以為常,重要的東西反而在不知不覺中被忽略了,我們當初決定研究玻璃的出發點就是為了讓大家更關心、注意甚至是感謝這盡心竭力讓我們的生活更為便利的小東西。
-</p>
+<div class="row">
+    <div class="col-lg-9">
+        <p>在這為期四個月過程中,資料從無到有,我們也從第一個禮拜不知道要探討什麼的迷惘變成對玻璃知識瞭如指掌的「玻璃達人」,上網.查書.訪問,這些動作無一不是組員花時間.費精力而來的!以下,是組員們製作專題的心得:</p>
+        <p><b>成分整理</b></p>
+        <p>查找資料的過程中過程中很容易就遇到大部分資料都是一模一樣的狀況，要從中取出精隨然後重新詮釋一遍再加入自己的想法，是一件滿困難的事。有一次好不容易統整完了，結果不小心把整個檔案都刪除了，當時心中非常無奈，但大家還是沒有怨言的馬上再把它重新整理了一次。對於國中生來說，有很多關於玻璃的專業名詞我們都不懂，上網資料不夠也必須去請教老師已獲得更詳細的解答。</p>
+        <hr>
+        <p><b>玻璃種類及應用</b></p>
+        <p>經由這次整理,我們了解到玻璃有很多不同的種類,每種玻璃的應用皆不同,知道玻璃的世界是如此廣泛,遠遠超出我們對它的理解範圍,無知的我們除了知道他能當窗戶外,沒有其他認知。尤其是身為組員的我們對它的理解是不夠的。從資料中我們一點一滴的加深對它的了解也慢慢充實自己的資訊。</p>
+        <hr>
+        <p><b>玻璃歷史統整</b></p>
+        <p>找玻璃的歷史最難的地方就是沒有一個正確的時間點，從網路和書慢慢整理出最正確的年代。整理過程中可能會與其他組員有許多意見不合的時候，但我們總是會向與自己意見相左的人互相提出自己的一套見解，再接納彼此的說法，反而延伸出更多值得我們去研究、探討的問題。統整後讓我們了解了各國玻璃的演進，還清楚的知道了臺灣的玻璃史，是一個很寶貴的經驗!</p>
+    </div>   
+    <div class="col-lg-3">
+        <img src="img/rsz_888.jpg" class="img-thumbnail">
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-3">
+        <img src="img/rsz_167.jpg" class="img-thumbnail">
+    </div>
+    <div class="col-lg-9">
+        <p><b>製作過程</b></p>
+        <p>當我們決定研究玻璃時，就對它的過程感到濃厚的興趣，到底是怎樣的製作方式可以讓玻璃就這樣形成?我們閒暇時就在腦海裡以想像中的製作方式在進行，結果看了行家拍攝玻璃製作的影片竟與與我們的想像相差甚遠!除了了解製作過程之外，還知道了隨著種類.用途的不同,製作過程也大不相同。大家都對於增加了這個新知識感到新奇與開心! </p>
+        <hr>
+        <p><b>實驗</b></p>
+        <p>一開始大家都無法決定玻璃可以嘗試哪些實驗，常見的有測試玻璃的折射係數和硬度，但想要與別人與眾不同，就得花時間查詢有沒有更特別的實驗。這時候，大家想到其實不用侷限於探討玻璃的實驗，在這個講究環保的時代,我們可以由廢物利用的方式製作我們日常生活常用的玻璃杯。提出這個點子，大家也就接連同意了，接著便是大家竭盡全力的尋找製作步驟及蒐集玻璃瓶,雖然花費了三個禮拜的時間，以及不斷失敗，但我們也從中學習到不屈不撓的精神!</p>
+        <p>在日常生活中處處可見玻璃,玻璃也為人類帶來了大大的好處,但可能就是因為司空見慣或習以為常,重要的東西反而在不知不覺中被忽略了,我們當初決定研究玻璃的出發點就是為了讓大家更關心、注意甚至是感謝這盡心竭力讓我們的生活更為便利的小東西。
+        </p>
+    </div>   
+</div>
+
 
                     </div>
                 </div>
