--- a/page02.html
+++ b/page02.html
@@ -82,10 +82,10 @@
                         </ul>
                     </li>
                     <li class="active">
-                        <a href="page02.html" class="menu2">動手做做看</a>
+                        <a href="page02.html#2-1" class="menu2">動手做做看</a>
                     </li>
                     <li>
-                        <a href="page03.html" class="menu3">專題誕生過程</a>
+                        <a href="page03.html#3-1" class="menu3">專題誕生過程</a>
                     </li>
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#p4" class="menu4">參加人員 <i class="fa fa-fw fa-caret-down"></i></a>
@@ -99,10 +99,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="page05.html" class="menu5">心得</a>
+                        <a href="page05.html#5-1" class="menu5">心得</a>
                     </li>
                     <li>
-                        <a href="page06.html" class="menu6">資料來源</a>
+                        <a href="page06.html#6-1" class="menu6">資料來源</a>
                     </li>
                 </ul>
             </div>
@@ -114,7 +114,7 @@
             <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <div class="row" id="1-1">
+                <div class="row" id="2-1">
                     <div class="col-lg-12">
                         <h1 class="page-header">
                             動手做做看
